Reworked and cleaned controllers